@@ -52,7 +52,7 @@ if (WIN32 OR APPLE)
     option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" OFF)
 else ()
     option(ENABLE_DEVICES_SUPPORT "Enable suport for external devices" ON)
-    option(ENABLE_SIMPLE_MPD_SUPPORT "Enable support for simple (Cantata controlled) MPD" ON)
+    option(ENABLE_SIMPLE_MPD_SUPPORT "Enable support for simple (Cantata controlled) MPD" OFF)
     option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" ON)
 endif ()
 option(ENABLE_CDPARANOIA "Enable CDParanoia libraries (required for AudioCD support)" ON)
@@ -649,22 +649,24 @@ if ((NOT ENABLE_DEVICES_SUPPORT AND NOT WIN32 AND NOT APPLE) OR (NOT ENABLE_HTTP
     message("-----------------------------------------------------------------------------")
     if (NOT ENABLE_DEVICES_SUPPORT)
         message("    * Devices Tab - Media device support (UMS, MTP, AudioCD).")
-    endif (NOT ENABLE_DEVICES_SUPPORT)
+    endif ()
     if (NOT ENABLE_HTTP_STREAM_PLAYBACK)
         message("    * MPD HTTP Streams - Playback MPD HTTP output stream via libVLC.")
-    endif (NOT ENABLE_HTTP_STREAM_PLAYBACK)
+    endif ()
     message("")
 endif ()
 
-if ((ENABLE_DEVICES_SUPPORT AND ENABLE_REMOTE_DEVICES) OR ENABLE_PROXY_CONFIG)
+if ((ENABLE_DEVICES_SUPPORT AND ENABLE_REMOTE_DEVICES) OR ENABLE_PROXY_CONFIG OR ENABLE_SIMPLE_MPD_SUPPORT)
     message("-----------------------------------------------------------------------------")
     message("-- The following NON STANDARD options have been ENABLED.")
     message("-----------------------------------------------------------------------------")
     if (ENABLE_PROXY_CONFIG)
         message("    * Proxy Configuration")
-    endif (ENABLE_PROXY_CONFIG)
+    endif ()
     if (ENABLE_REMOTE_DEVICES)
         message("    * Remote Devices - Access sshfs, Samba, and local folders as devices. (EXPERIMENTAL)")
-    endif (ENABLE_REMOTE_DEVICES)
+    endif ()
+    if (ENABLE_SIMPLE_MPD_SUPPORT)
+	    message("    * Simple/Personal (Cantata controlled) MPD instance support")
     message("")
 endif ()
