@@ -78,6 +78,7 @@
 60. Add support for OriginalDate tag.
 61. Bundle newer openSSL with macOS builds.
 62. Update copy of libebur128
+63. Disable 'Personal' MPD instance support by default.
 
 2.0.1
 -----
